--- a/aula005/ex005.html
+++ b/aula005/ex005.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dom</title>
+
+    <style>
+
+
+body{
+
+background: rgba(103, 138, 32, 0.555);
+color: white;
+font-family: Arial, Helvetica, sans-serif;
+font-size:  1.2em;
+font-weight: bold;
+}
+
+strong{
+
+
+color: brown;
+
+
+}
+
+
+    </style>
+
+
 </head>
+
+
 <body>
+
+    <h1>iniciando estudos dom</h1>
+
+    <p>aqui vai o resultado</p>
+
+    <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript </p>
+    <div id="msg">
+
+Clique em mim
+
+    </div>
+
+
+<script>
+
+var corpo = window.document.body
+var p1 = window.document.getElementsByTagName ('p')[0] 
+p1.style.color= 'yellow'
+window.document.write ('esta escrito assim ' + p1.innerHTML)
+var d=window.document.querySelector ('div#msg')
+d.style.color = 'blue'
+
+</script>
+
+
+
     
 </body>
+
+
+
+
+
+
+
+
+
+
 </html>
