--- a/aula005/ex007.html
+++ b/aula005/ex007.html
@@ -6,35 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eventos DOM</title>
 
-
-<style>
-
-body{
-
-font-size:  1.4em;
-font-weight: bold;
-font-family:Arial, Helvetica, sans-serif
-}
-
-input {
-
-color: violet;
-font-family: Arial, Helvetica, sans-serif;
-font-weight: bold;
-width:  100px;
-
-}
-div#res{
-
-margin-top:  30px;
-padding: 10px;
+    <link rel="stylesheet" href="estilo/style.css">
 
 
-
-}
-
-
-</style>
 
 
 </head>
@@ -49,6 +23,7 @@ padding: 10px;
 
 
 <h1>Somando Valores</h1>
+
 <label for="soma">Soma dos valores:</label>
 
 <input type="number" name="txtn1" id="txtn1">
