--- a/aula005/ex010.html
+++ b/aula005/ex010.html
@@ -33,6 +33,11 @@ var txtv = window.document.querySelector('input#txtvel')
 var res = window.document.querySelector('div#res')
 var vel = Number(txtv.value)
 res.innerHTML = `Sua velocidade atual é de ${vel}Km/h`
+if (vel >60) {
+
+   res.innerHTML += `<p> voce esta MULTADO por excesso de velocidade`
+
+}
 res.innerHTML += `<p>Dirija sempre com segurança! </p>`
 
 }
