--- a/aula005/ex009.html
+++ b/aula005/ex009.html
@@ -34,10 +34,11 @@ var res = window.document.querySelector ('div#res')
 res.innerHTML += ' <p> Obrigado por participar da pesquisa </p>'
 if (pais  == 'brasil')
 
-res.innerHTML += 
+res.innerHTML += `Voce é Brasileiro`
 
 
 }
+
 
 
 </script>
