--- a/Exercicios/exercicio1.html
+++ b/Exercicios/exercicio1.html
@@ -49,10 +49,12 @@
 
 <footer>
 
-<p>Feito por: <strong><a href="https://www.linkedin.com/in/gabriel-cardoso-0041101ab/" target="_blank">Gabriel Cardoso</a></strong></p>
+<p id="roda">Feito por: <strong><a href="https://www.linkedin.com/in/gabriel-cardoso-0041101ab/" target="_blank">Gabriel Cardoso</a></strong></p>
 
 
 </footer>
+
+<script src="script.js"></script>
 
 </body>
 
