--- a/Exercicios/exercicio1.html
+++ b/Exercicios/exercicio1.html
@@ -52,7 +52,7 @@
 
 <footer>
 
-<p id="roda">Feito por: <strong><a href="https://www.linkedin.com/in/gabriel-cardoso-0041101ab/" target="_blank">Gabriel Cardoso</a></strong></p>
+<p id="roda">Feito por <strong><a href="https://www.linkedin.com/in/gabriel-cardoso-0041101ab/" target="_blank">Gabriel Cardoso</a></strong></p>
 
 
 </footer>
