--- a/exercicio3/exercicio.html
+++ b/exercicio3/exercicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vamos Contar!</title>
+    <title>Vamos Contar</title>
 
 <link rel="stylesheet" href="style.css">
 
@@ -18,6 +18,7 @@
         <header>
 
             <h1>Vamos contar! </h1>
+            
         </header>
 
         <section>
