--- a/exerrcicio5/index.html
+++ b/exerrcicio5/index.html
@@ -25,7 +25,7 @@
                         <input type="number" name="fnum" id="fnum">
                         <input id="botao" type="button" value="Adicionar" onclick="adicionar()">
                         <br> <br> <select name="flista" id="flista" size="6"></select>
-                        <br> <input id="botao" type="button" value="Finalizar">
+                        <br> <input id="botao" type="button" value="Finalizar" onclick="finalizar()">
 
 
 
